--- a/flyoutsample/Views/AboutPage.xaml
+++ b/flyoutsample/Views/AboutPage.xaml
@@ -14,47 +14,121 @@
             <Color x:Key="Accent">#96d1ff</Color>
         </ResourceDictionary>
     </ContentPage.Resources>
-
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="*" />
-        </Grid.RowDefinitions>
-        <StackLayout BackgroundColor="{StaticResource Accent}" VerticalOptions="FillAndExpand" HorizontalOptions="Fill">
-            <StackLayout Orientation="Horizontal" HorizontalOptions="Center" VerticalOptions="Center">
-                <ContentView Padding="0,40,0,40" VerticalOptions="FillAndExpand">
-                    <Image Source="xamarin_logo.png" VerticalOptions="Center" HeightRequest="64" />
-                </ContentView>
-            </StackLayout>
-        </StackLayout>
-        <ScrollView Grid.Row="1">
-            <StackLayout Orientation="Vertical" Padding="30,24,30,24" Spacing="10">
-                <Label Text="Start developing now" FontSize="Title"/>
-                <Label Text="Make changes to your XAML file and save to see your UI update in the running app with XAML Hot Reload. Give it a try!" FontSize="16" Padding="0,0,0,0"/>
-                <Label FontSize="16" Padding="0,24,0,0">
-                    <Label.FormattedText>
-                        <FormattedString>
-                            <FormattedString.Spans>
-                                <Span Text="Learn more at "/>
-                                <Span Text="https://aka.ms/xamarin-quickstart" FontAttributes="Bold"/>
-                            </FormattedString.Spans>
-                        </FormattedString>
-                    </Label.FormattedText>
-                </Label>
-                <Picker x:Name="QtyPicker" Title="Select a Qantity" TitleColor="Red" ItemsSource="{Binding QtyList}" ItemDisplayBinding="{Binding DisplayLable}" SelectedItem="{Binding SelectedQty}" HorizontalOptions="FillAndExpand">
-                   
-                    <!---Picker.Items>
-                        <x:String>1</x:String>
-                        <x:String>2</x:String>
-                    </Picker.Items>
-                    -->
-                </Picker>
-                <Button Margin="0,10,0,0" Text="Learn more"
+    <!--
+        <AbsoluteLayout HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" Background="Red">
+                
+               <Button Margin="0,10,0,0" Text="Learn more"
                         Command="{Binding OpenWebCommand}"
                         BackgroundColor="{StaticResource Primary}"
-                        TextColor="White" />
+                        TextColor="White" /> 
+        <ContentView x:Name="QtyDialogView" Padding="10" IsVisible="true" Background="Yellow" AbsoluteLayout.LayoutBounds="0,0,1,1">
+            <StackLayout VerticalOptions="Center" HorizontalOptions="Center">
+                <StackLayout Orientation="Vertical" Background="Blue">
+        <ListView x:Name="QtyPicker"  ItemsSource="{Binding QtyList}" HorizontalOptions="Center" VerticalOptions="Center" WidthRequest="200" HeightRequest="300">
+                        <ListView.ItemTemplate>
+                            <DataTemplate>
+                                <ViewCell>
+                                    <ViewCell.View>
+                                        <StackLayout>
+                                            <StackLayout HorizontalOptions="FillAndExpand" HeightRequest="65" BackgroundColor="{Binding BackgroundColor}">
+                                                <Label Text="{Binding DisplayLable}" 
+                                                FontSize="18"
+                                                HorizontalOptions="Center"
+                                                VerticalOptions="Center"
+                                                LineBreakMode="WordWrap" />
+                                            </StackLayout>
+                                            <Label HeightRequest="15" BackgroundColor="White"/>
+                                        </StackLayout>
+                                    </ViewCell.View>
+                                </ViewCell>
+                            </DataTemplate>
+                        </ListView.ItemTemplate>
+                    </ListView>
+                </StackLayout>
             </StackLayout>
-        </ScrollView>
-    </Grid>
+        </ContentView>
+    </AbsoluteLayout>
+-->
 
-</ContentPage>
+        <AbsoluteLayout>
+
+            <!-- Normal Page Content -->
+            <StackLayout AbsoluteLayout.LayoutBounds="0, 0, 1, 1"  
+                     AbsoluteLayout.LayoutFlags="All">
+                <Button Text="Display Popup"  
+              FontSize="Large"  
+              VerticalOptions="CenterAndExpand"  
+              HorizontalOptions="Center"  
+              Command="{Binding OpenQtyDialog}" />
+            </StackLayout>
+
+            <!-- Overlay -->
+            <ContentView x:Name="overlay1"  
+                 AbsoluteLayout.LayoutBounds="0, 0, 1, 1"  
+                 AbsoluteLayout.LayoutFlags="All"  
+                 IsVisible= "{Binding ShowQtyEntryDialog}" 
+                 BackgroundColor="#C0808080"  
+                 Padding="10, 0">
+
+            <StackLayout Orientation="Vertical"   
+                   BackgroundColor="White"   
+                   HorizontalOptions="Center"   
+                   VerticalOptions="Center"   
+                   Padding="10">
+
+
+                <Entry x:Name="entryQtyVal"   
+                       Placeholder="Enter Quantity"
+                       TextColor="Black"   
+                       VerticalOptions="CenterAndExpand"   
+                       HorizontalOptions="FillAndExpand"/>
+
+                <StackLayout Orientation="Horizontal" HorizontalOptions="Center">
+
+                    <Button Text="Cancel" FontSize="Large"  
+                      VerticalOptions="CenterAndExpand"  
+                      HorizontalOptions="Center"  
+                      />
+
+                    <Button Text="Ok" FontSize="Large"  
+                        VerticalOptions="CenterAndExpand"  
+                        HorizontalOptions="Center"  
+                         />
+                </StackLayout>
+            </StackLayout>
+        </ContentView>
+        <ContentView x:Name="overlay" IsVisible="{Binding ShowQtyList}" AbsoluteLayout.LayoutBounds="0, 0, 1, 1"  
+                 AbsoluteLayout.LayoutFlags="All"  
+                 BackgroundColor="#C0808080"  
+                 Padding="10, 0">
+            <StackLayout  Orientation="Vertical"   
+                   BackgroundColor="White"   
+                   HorizontalOptions="Center"   
+                   VerticalOptions="Center"   
+                   Padding="10">
+            <ListView x:Name="QtyPicker"  ItemsSource="{Binding QtyList}" SelectedItem="{Binding SelectedQty}" HorizontalOptions="Center" VerticalOptions="Center" WidthRequest="200" HeightRequest="300">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <ViewCell>
+                            <ViewCell.View>
+                                    <StackLayout HorizontalOptions="Center"
+                                                VerticalOptions="Center">
+                                        
+                                        <Label Text="{Binding .}" 
+                                                FontSize="18"
+                                                TextColor="Black"
+                                                Background="Yellow"
+                                                HorizontalOptions="Center"
+                                                VerticalOptions="Center"
+                                                LineBreakMode="WordWrap" />
+                                    </StackLayout>
+                            </ViewCell.View>
+                        </ViewCell>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+            </StackLayout>
+        </ContentView>
+        </AbsoluteLayout>
+    </ContentPage>
+
