--- a/flyoutsample/Views/AboutPage.xaml
+++ b/flyoutsample/Views/AboutPage.xaml
@@ -2,6 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="flyoutsample.Views.AboutPage"
+             xmlns:customControl="clr-namespace:flyoutsample.CustomControl"
              xmlns:vm="clr-namespace:flyoutsample.ViewModels"
              Title="{Binding Title}">
     
@@ -97,7 +98,7 @@
                 </StackLayout>
             </StackLayout>
         </ContentView>
-        <ContentView x:Name="overlay" IsVisible="{Binding ShowQtyList}" AbsoluteLayout.LayoutBounds="0, 0, 1, 1"  
+        <!--<ContentView x:Name="overlay" IsVisible="{Binding ShowQtyList}" AbsoluteLayout.LayoutBounds="0, 0, 1, 1"  
                  AbsoluteLayout.LayoutFlags="All"  
                  BackgroundColor="#C0808080"  
                  Padding="10, 0">
@@ -106,14 +107,14 @@
                    HorizontalOptions="Center"   
                    VerticalOptions="Center"   
                    Padding="10">
-            <ListView x:Name="QtyPicker"  ItemsSource="{Binding QtyList}" SelectedItem="{Binding SelectedQty}" HorizontalOptions="Center" VerticalOptions="Center" WidthRequest="200" HeightRequest="300">
-                <ListView.ItemTemplate>
-                    <DataTemplate>
-                        <ViewCell>
-                            <ViewCell.View>
+                <ListView x:Name="QtyPicker"  ItemsSource="{Binding QtyList}" SelectedItem="{Binding SelectedQty}" HorizontalOptions="Center" VerticalOptions="Center" WidthRequest="200" HeightRequest="300">
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <ViewCell>
+                                <ViewCell.View>
                                     <StackLayout HorizontalOptions="Center"
                                                 VerticalOptions="Center">
-                                        
+
                                         <Label Text="{Binding .}" 
                                                 FontSize="18"
                                                 TextColor="Black"
@@ -122,13 +123,16 @@
                                                 VerticalOptions="Center"
                                                 LineBreakMode="WordWrap" />
                                     </StackLayout>
-                            </ViewCell.View>
-                        </ViewCell>
-                    </DataTemplate>
-                </ListView.ItemTemplate>
-            </ListView>
+                                </ViewCell.View>
+                            </ViewCell>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+               
             </StackLayout>
-        </ContentView>
-        </AbsoluteLayout>
+        </ContentView>-->
+
+        <customControl:QtyPickerView QtyList="{Binding QtyList}" SelectedQty="1" ShowQtyList="{Binding ShowQtyList}" ></customControl:QtyPickerView>
+    </AbsoluteLayout>
     </ContentPage>
 
